<resources>
    <string name="app_name">EventSpot</string>
    <string name="map">Map</string>
    <string name="events">Events</string>
    <string name="saved">Saved</string>
    <string name="profile">Profile</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="username">Username</string>
    <string name="date">date</string>
    <string name="comment_text">Comment text</string>

    <string name="google_maps_key">AIzaSyB7d4DNoomrA7wwouJUV8xNBl2C012hem4</string>
    <string name="all_events">All Events</string>
    <string name="welcome">Welcome</string>
    <string name="search">Search</string>
    <string name="back">Back</string>
    <string name="date1">Date:</string>
    <string name="producer">Producer:</string>
    <string name="event_name">Event Name</string>
    <string name="time">Time:</string>
    <string name="categories">Categories:</string>
    <string name="description">Description</string>
    <string name="event_description">Event description</string>
    <string name="join_event">Join Event</string>
    <string name="comments">Comments</string>
    <string name="write_a_comment">Write a comment</string>
    <string name="add_comment">Add Comment</string>
    <string name="event_page"><u>Explore event details</u></string>
    <string name="welcome_to_eventspot">Welcome to EventSpot</string>
    <string name="discover_events_near_you">Discover events near you</string>
    <string name="event_address">Event address</string>
    <string name="event_title">Event title</string>
    <string name="save_event">Save event</string>
    <string name="navigation_event">Navigation event</string>
    <string name="saved_events">Saved Events</string>
    <string name="no_saved_events_yet">No saved events yet</string>
    <string name="no_events_found">No events found</string>
    <string name="recommended_for_you">Recommended for you</string>
    <string name="based_on_your_interests">Based on your selected interests</string>
    <string name="no_recommended_events_yet">No recommended events yet</string>
    <string name="recommended_event_image">Recommended event image</string>
    <string name="available_only">Available only</string>
    <string name="select_date">Select date</string>
    <string name="discover_events_save_your_favorites_and_join_activities">Discover events, save your favorites, and join activities</string>
    <string name="producer2">Producer</string>
    <string name="includes_all_user_features_with_the_ability_to_create_edit_and_delete_your_own_events">Includes all User features, with the ability to create, edit, and delete your own events</string>
    <string name="continue2">Continue</string>
    <string name="choose_your_role">Choose Your Role</string>
    <string name="select_how_you_want_to_use_eventspot">Select how you want to use EventSpot</string>
    <string name="event_explorer">Event Explorer</string>
    <string name="choose_your_interests">Choose your interests</string>
    <string name="choose_up_to_5_categories">Choose at least 1 category and up to 5 categories</string>
    <string name="selected_categories_count_default">Selected 0/5</string>
    <string name="selected_categories_count">Selected %1$d/%2$d</string>
    <string name="choose_categories_limit_message">You can choose up to %1$d categories</string>
    <string name="please_choose_at_least_one_category">Please choose at least one category</string>
    <string name="profile2">Profile</string>
    <string name="logout">logout</string>
    <string name="add">add</string>
    <string name="upload_image">upload image</string>
    <string name="address">Address:</string>
    <string name="description2">Description</string>
    <string name="address2">Address</string>
    <string name="event_name2">*Event name</string>
    <string name="choose_category">Choose category</string>
    <string name="categories_hint">You can choose up to 3 categories</string>
    <string name="date_and_time">Date and time</string>
    <string name="date_time_hint">Choose a future date and time</string>
    <string name="include_time">Include time</string>
    <string name="date_only">Date only</string>
    <string name="date_required">Date is required</string>
    <string name="address_hint">Tap to search for a place on the map</string>
    <string name="max_participants">Max participants</string>
    <string name="max_participants_hint">Optional. Leave empty for no participant limit</string>
    <string name="add_event">Add Event</string>
    <string name="edit_event">edit event</string>
    <string name="delete_event">delete event</string>
    <string name="settings">Settings</string>
    <string name="notifications">Notifications</string>
    <string name="enable_notifications">Enable notifications</string>
    <string name="joined_event_updates">Joined event updates</string>
    <string name="daily_new_events">Daily new events</string>
    <string name="permissions">Permissions</string>
    <string name="location_permission">Location permission</string>
    <string name="status_unknown">Status: Unknown</string>
    <string name="manage">Manage</string>
    <string name="end_date_and_time">End date and time</string>
    <string name="end_date">End date</string>
    <string name="optional_choose_when_the_event_ends">Optional - choose when the event ends</string>
</resources>
